--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "flux": "^2.1.1",
     "helmet": "^1.3.0",
+    "loopback": "^3.0.0-alpha.1",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
+    "react": "^15.1.0",
     "serve-favicon": "^2.0.1",
-    "loopback": "^3.0.0-alpha.1"
+    "superagent": "^2.0.0"
   },
   "devDependencies": {
+    "browserify": "^13.0.1",
     "eslint": "^2.5.3",
     "nsp": "^2.1.0"
   },
