--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -16,13 +16,20 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-router": "^2.5.1",
     "serve-favicon": "^2.0.1",
     "superagent": "^2.0.0"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.3.0",
     "browserify": "^13.0.1",
+    "del": "^2.2.1",
     "eslint": "^2.5.3",
-    "nsp": "^2.1.0"
+    "gulp": "^3.9.1",
+    "nsp": "^2.1.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "repository": {
     "type": "",
