--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -12,9 +12,11 @@
     "cors": "^2.5.2",
     "flux": "^2.1.1",
     "helmet": "^1.3.0",
+    "keymirror": "^0.1.1",
     "loopback": "^3.0.0-alpha.1",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
+    "object-assign": "^4.1.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.1",
