--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -30,6 +30,7 @@
     "browserify": "^13.0.1",
     "del": "^2.2.1",
     "eslint": "^2.5.3",
+    "factor-bundle": "^2.5.0",
     "gulp": "^3.9.1",
     "gulp-notify": "^2.2.0",
     "nsp": "^2.1.0",
