--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -24,6 +24,7 @@
     "superagent": "^2.0.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
     "browser-sync": "^2.13.0",
