--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -17,6 +17,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "object-assign": "^4.1.0",
+    "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.1",
