--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.5.2",
     "flux": "^2.1.1",
     "helmet": "^1.3.0",
+    "jquery": "^3.0.0",
+    "jquery.transition": "^0.1.0",
     "keymirror": "^0.1.1",
     "loopback": "^3.0.0-alpha.1",
     "loopback-boot": "^2.6.5",
