--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -22,6 +22,7 @@
     "path": "^0.12.7",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-dropzone": "^3.5.1",
     "react-router": "^2.5.1",
     "serve-favicon": "^2.0.1",
     "superagent": "^2.0.0"
