aggiunto login con company

--- a/MaaS/server/model-config.json
+++ b/MaaS/server/model-config.json
@@ -42,5 +42,9 @@
     "options": {
       "emailVerificationRequired": true
     }
+  },
+  "Company": {
+    "dataSource": "maas",
+    "public": true
   }
 }
