--- a/MaaS/server/model-config.json
+++ b/MaaS/server/model-config.json
@@ -46,5 +46,9 @@
   "Company": {
     "dataSource": "maas",
     "public": true
+  },
+  "ExternalDatabase": {
+    "dataSource": "maas",
+    "public": true
   }
 }
