--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -20,6 +20,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-connector-mongodb": "^1.15.2",
+    "material-ui": "^0.15.2",
     "mongoose": "^4.5.4",
     "object-assign": "^4.1.0",
     "path": "^0.12.7",
@@ -28,6 +29,7 @@
     "react-dropzone": "^3.5.1",
     "react-router": "^2.5.1",
     "react-slick": "^0.12.2",
+    "react-tap-event-plugin": "^1.0.0",
     "serve-favicon": "^2.0.1",
     "superagent": "^2.0.0"
   },
