--- a/MaaS/server/model-config.json
+++ b/MaaS/server/model-config.json
@@ -55,7 +55,7 @@
     "dataSource": "maas",
     "public": true,
     "options": {
-      "emailVerificationRequired": true
+      "emailVerificationRequired": false
     }
   }
 }
