--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -12,6 +12,7 @@
     "brace": "^0.8.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "dotenv": "^2.0.0",
     "flux": "^2.1.1",
     "helmet": "^1.3.0",
     "jquery": "^3.0.0",
@@ -26,6 +27,7 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-dropzone": "^3.5.1",
+    "react-mdl": "^1.6.1",
     "react-router": "^2.5.1",
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
@@ -42,6 +44,7 @@
     "eslint": "^2.5.3",
     "gulp": "^3.9.1",
     "gulp-notify": "^2.2.0",
+    "gulp-preprocess": "^2.0.0",
     "nsp": "^2.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
