--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^2.0.0",
+    "bootstrap": "^3.3.7",
     "brace": "^0.8.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
@@ -25,11 +26,11 @@
     "object-assign": "^4.1.0",
     "path": "^0.12.7",
     "react": "^15.1.0",
+    "react-bootstrap-table": "^2.3.9",
     "react-collapse": "^2.3.1",
     "react-dom": "^15.1.0",
     "react-dropzone": "^3.5.1",
     "react-height": "^2.1.1",
-    "react-mdl": "^1.6.1",
     "react-motion": "^0.4.4",
     "react-router": "^2.5.1",
     "react-slick": "^0.12.2",
