--- a/MaaS/.env
+++ b/MaaS/.env
@@ -1,3 +1,15 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=s1mpl3
+HOST_URL=https://maas-navid94.c9users.io
+API_ROOT=/api
+
+DB_HOST=ds027338.mlab.com
+DB_USER=mintswe
+DB_PASS=mint2016
+DB_PORT=27338
+DB_URL=mongodb://mintswe:mint2016@ds027338.mlab.com:27338/maas
+DB_NAME=maas
+
+SMTP_NAME=gmail
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=mint.swe.unipd@gmail.com
+SMTP_PASSWORD=mint.swe
+SMTP_PORT=465
