--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -17,6 +17,7 @@
     "helmet": "^1.3.0",
     "jquery.transition": "^0.1.0",
     "keymirror": "^0.1.1",
+    "localenvify": "^1.0.1",
     "loopback": "^3.0.0-alpha.1",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
