--- a/MaaS/.env
+++ b/MaaS/.env
@@ -1,4 +1,6 @@
+HOST_NAME=maas-navid94.c9users.io
 HOST_URL=https://maas-navid94.c9users.io
+HOST_PORT=8080
 API_ROOT=/api
 
 DB_HOST=ds027338.mlab.com
