--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -49,7 +49,9 @@
     "gulp": "^3.9.1",
     "gulp-notify": "^2.2.0",
     "gulp-preprocess": "^2.0.0",
+    "gulp-uglify": "^2.0.0",
     "nsp": "^2.1.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
