unificati modelli dei DSL

--- a/MaaS/server/model-config.json
+++ b/MaaS/server/model-config.json
@@ -58,19 +58,7 @@
     "dataSource": "maas",
     "public": true
   },
-  "Dashboard": {
-    "dataSource": "maas",
-    "public": true
-  },
-  "Collection": {
-    "dataSource": "maas",
-    "public": true
-  },
-  "Document": {
-    "dataSource": "maas",
-    "public": true
-  },
-  "Cell": {
+  "DSL": {
     "dataSource": "maas",
     "public": true
   }
