--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -35,7 +35,8 @@
     "react-slick": "^0.12.2",
     "react-tap-event-plugin": "^1.0.0",
     "serve-favicon": "^2.0.1",
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "sweet.js": "^2.0.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
