--- a/MaaS/server/model-config.json
+++ b/MaaS/server/model-config.json
@@ -61,5 +61,9 @@
   "DSL": {
     "dataSource": "maas",
     "public": true
+  },
+  "DSLAccess": {
+    "dataSource": "maas",
+    "public": true
   }
 }
