impostato redirect a seconda del valore di activeDashboard

--- a/MaaS/.env
+++ b/MaaS/.env
@@ -1,5 +1,5 @@
-HOST_NAME=maas-michael-tommi-mick93.c9users.io
-HOST_URL=https://maas-michael-tommi-mick93.c9users.io
+HOST_NAME=maas-navid94.c9users.io
+HOST_URL=https://maas-navid94.c9users.io
 HOST_PORT=8080
 API_ROOT=/api
 
