--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "async": "^2.0.0",
+    "babel-core": "^6.13.2",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "dotenv": "^2.0.0",
@@ -39,6 +40,7 @@
     "sweet.js": "^2.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.3.0",
