aggiunti dati del superadmin al file .env

--- a/MaaS/.env
+++ b/MaaS/.env
@@ -15,3 +15,6 @@ SMTP_HOST=smtp.gmail.com
 SMTP_USER=mint.swe.unipd@gmail.com
 SMTP_PASSWORD=mint.swe
 SMTP_PORT=465
+
+SUPERADMIN_EMAIL=superadmin@gmail.com
+SUPERADMIN_PASSWORD=123456789
