--- a/MaaS/package.json
+++ b/MaaS/package.json
@@ -11,6 +11,7 @@
     "async": "^2.0.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "email-verify": "0.0.18",
     "flux": "^2.1.1",
     "helmet": "^1.3.0",
     "jquery.transition": "^0.1.0",
