--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST_NAME=localhost
-HOST_URL=127.0.0.1
+HOST_NAME=maas-navid94.c9users.io
+HOST_URL=https://maas-navid94.c9users.io
 HOST_PORT=8080
 API_ROOT=/api
 
